made the button work

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ timeout = setInterval(updateImages, 1000);
 				<div class="mdl-grid" id="card_grid">
 					<div align="center" class="mdl-cell mdl-cell--6-col" id="newGraph_Button_Cell">
 						<!-- Colored FAB button with ripple -->
-						<button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored">
+						<button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored" onClick="addGraph(document.getElementById('newGraphInput').value)">
 							<i class="material-icons">add</i>
 						</button>
 
