--- a/levylab-viewer/index_before_replaceFunctionality.html
+++ b/levylab-viewer/index_before_replaceFunctionality.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>REMOTE EXPERIMENT MONITOR</title>
+<title>REMOTE DATA VIEWER TEST</title>
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue_grey-indigo.min.css">
 <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
@@ -119,7 +119,7 @@ function setInstrumentCellSize(size){
 }
 
 //high level function to add everything necessary for a new graph and set it up
-function addGraph(ip){
+function addGraph(ip, index){
 	//make a new cell containing a new card @ index hosts.length with 'ip' as the src
 	//to insert @ end:    document.getElementById('card_grid').appendChild(newCell(newChartCard(hosts.length, ip)));
 	document.getElementById('card_grid').insertBefore(newChartCard(hosts.length, ip), document.getElementById('newGraph_Button_Cell'));
@@ -151,17 +151,9 @@ function removeInstCard(index){
 	instruments--;
 	//alert(hosts.length);
 }
-function replaceChartCard(index, ip){
-	alert('replacing card at '+index+' with '+ip);
-	alert(chartCards);
+function replaceChartCard(index){
 	removeChartCard(index);
-	alert('now'+chartCards);
-	//add the new graph
-	alert('adding');
-	document.getElementById('card_grid').insertBefore(newChartCard(hosts.length, ip), document.getElementById('card'+(index+1)));
-	alert(chartCards);
-	hosts.splice(index, 0, ip);
-	charts++;
+	
 }
 
 function newChartCard(index, ip){
@@ -287,7 +279,7 @@ function newChartCard(index, ip){
 	desc.className = 'mdl-card__supporting-text';
 	desc.setAttribute('align','center');
 	desc.innerHTML = "Insert Description Here.";
-	//card.appendChild(desc);
+	card.appendChild(desc);
 	
 	//add text field stuff for changing ip
 	var ipFieldDiv = document.createElement('div');
@@ -424,7 +416,7 @@ function updateDscInfo(){
 function updateDscCard(index){
 	var key = DSC_Data[index].key;
 	var value = DSC_Data[index].value;
-	document.getElementById("icardDesc"+index).innerHTML = ("<h4>"+key+":</h4><h5>"+value+"</h5>");
+	document.getElementById("icardDesc"+index).innerHTML = ("<h3>"+key+":</h3><h6>"+value+"</h6>");
 }
 function onHttpSuccess(){
 	updateDscInfo();
@@ -502,7 +494,7 @@ timeout2 = setInterval(refreshDSC, 1000);
 		<header class="mdl-layout__header">
 			<div class="mdl-layout__header-row">
 				<!-- Title -->
-				<span class="mdl-layout-title">LevyLab Data Monitor</span>
+				<span class="mdl-layout-title">LevyLab Data Viewer</span>
 				<!-- Add spacer, to align navigation to the right -->
 				<div class="mdl-layout-spacer"></div>
 				<!-- Navigation. We hide it in small screens. -->
@@ -547,10 +539,6 @@ timeout2 = setInterval(refreshDSC, 1000);
 			<button class="mdl-button mdl-js-button mdl-button--fab mdl-button--colored" onClick="updateImages()">
 				<i class="material-icons">autorenew</i>
 			</button>
-			<button class="mdl-button mdl-js-button mdl-button--fab mdl-button--colored" onClick="replaceChartCard(2, 'faial.faaial.faail.afail')" style="display:inline-block">
-				<i class="material-icons">autorenew</i>
-			</button>
-			
 			<div class="page-content" style="width:100%;">
 				<!-- Big grid to divide whole thing in half -->
 				<!-- <div class="mdl-grid mdl-grid--no-spacing" id="big_grid"> -->
