--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 
 <body>
 <h1> TEST </h1>
-<a href="./levylab-viewer/index.html"> link to levylab viewer </a>
+<a href="./fancy/index.html"> link to phil's site    **work in progress**</a>
+<br>
+<a href="./levylab-viewer/index.html"> link to levylab viewer testing </a>
 </body>
 
 </html>
