edge labels, and can make edges disappear when hovered over lol

--- a/fancy/index.html
+++ b/fancy/index.html
@@ -69,7 +69,7 @@
 .welcome-card.mdl-card {
   opacity: 1;
   border-radius:1%;
-  background: url('assets/balloon.jpg') center / cover;
+  background: url('assets/balloonsmall.jpg') center / cover;
   transition: transform 0.3s;
 }
 .welcome-card > .mdl-card__title {
