switched to barebones skeleton formatting, added resume

--- a/index.html
+++ b/index.html
@@ -1,10 +1,51 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<title> Phil Shenk </title>
 
+  <!-- Basic Page Needs
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <meta charset="utf-8">
+  <title>phil shenk</title>
+  <meta name="description" content="phil shenk's personal webpage">
+  <meta name="author" content="phil shenk">
+
+  <!-- Mobile Specific Metas
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- FONT
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link href="https://fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+
+  <!-- CSS
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/skeleton.css">
+  <link rel="stylesheet" href="css/philpage.css">
+
+  <!-- Favicon
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="icon" type="image/png" href="images/favicon.png">
+
+</head>
 <body>
-<h1> TEST </h1>
-test
-</body>
 
+  <!-- Primary Page Layout
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <div class="section banner">
+    <div class="container">
+      <div class="row">
+        <div class="one-half column">
+	  	  <h1>Philip Shenk</h1>
+		    <br><br>
+        <h3><a href="https://github.com/phil-shenk">github</a></h3>
+	  	  <h3><a href="files/Philip_Shenk_Resume.pdf">physics resume</a></h3>
+        </div>
+      </div>
+    </div>
+  </div>
+
+<!-- End Document
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+</body>
 </html>
