--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     <div class="section banner">
         <div class="container">
             <div class="row">
-                <div class="one-half column">
-                    <br><br><br><br>
+                <div class="one-third column">
+                    <br>
                     <h1>Philip Shenk</h1>
                     <br>
                     <br>
