added art and yam

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                     <br>
                     <h3><a href="https://github.com/phil-shenk">github</a></h3>
                     <h3><a href="files/Philip_Shenk_Resume.pdf">physics resume</a></h3>
+                    <h3><a href="art">art</a></h3>
                 </div>
             </div>
         </div>
