added 2 photos to art page

--- a/art/index.html
+++ b/art/index.html
@@ -83,6 +83,13 @@
 	  <div class="description">
 	  <p align="right"> <i>headache</i>. Pineapple, 2020</p>
 	  </div>
+
+	  <div class="option">
+		<img src="images/ends.jpg">
+	  </div>
+	  <div class="description">
+	  <p align="right"> <i>ends</i>. Oneplus 6, 2019</p>
+	  </div>
 	  
 	  <div class="option">
 	    <video autoplay loop muted playsinline>
@@ -99,7 +106,6 @@
 	  <div class="description">
 	  <p align="right"> <i>voronoi chicken on snowy mount</i>. Blender, 2020</p>
 	  </div>
-	 
 	  
 	  <div class="option">
 	    <video autoplay loop muted playsinline>
@@ -110,13 +116,18 @@
 	  <p align="right"> <i>donut man</i>. Blender, 2019</p>
 	  </div>
 	  
-	  
-	  
 	  <div class="option">
 		<img src="images/pitt.jpg">
 	  </div>
 	  <div class="description">
 	  <p align="right"> <i>cathy</i>. Oneplus 6, 2020</p>
+	  </div>
+
+	  <div class="option">
+		<img src="images/philstars.jpg">
+	  </div>
+	  <div class="description">
+	  <p align="right"> <i>farm</i>. Oneplus 6, 2019</p>
 	  </div>
 	  
 	  <div class="option">
