embedded antenna visualizations in art page

--- a/art/index.html
+++ b/art/index.html
@@ -141,6 +141,9 @@
 	  <div class="option">
 		  <h3><i><a href="yam">yam</a></i></h3>
 	  </div>
+	  <div class="option">
+		  <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLo-TAH2eiryEtgEQkLjHA5jBAT0-cNPJ8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	  </div>
   </div>
 
 
