moved embedded dipole playlist up toward top of art page

--- a/art/index.html
+++ b/art/index.html
@@ -76,6 +76,10 @@
 	  <div class="description">
 	  <p align="right"> <i>micrometer phil</i>. LAO/STO in Agilent 5500, 2019</p>
 	  </div>
+
+	  <div class="option">
+		  <iframe src="https://www.youtube.com/embed/videoseries?list=PLo-TAH2eiryEtgEQkLjHA5jBAT0-cNPJ8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	  </div>
 	  
 	  <div class="option">
 		<img src="images/knifePineapple.jpg">
@@ -137,12 +141,10 @@
 	  <p align="right"> <i>flagstaff</i>. Oneplus 6, 2020</p>
 	  </div>
 
+
 	  <h2>Additional exhibitions</h2>
 	  <div class="option">
 		  <h3><i><a href="yam">yam</a></i></h3>
-	  </div>
-	  <div class="option">
-		  <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLo-TAH2eiryEtgEQkLjHA5jBAT0-cNPJ8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	  </div>
   </div>
 
