--- a/art/index.html
+++ b/art/index.html
@@ -79,7 +79,7 @@
 
 
 	  <div class="option">
-		  <iframe src="https://www.youtube.com/embed/videoseries?list=PLo-TAH2eiryEtgEQkLjHA5jBAT0-cNPJ8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		  <iframe width="100%" height="100%" src="https://www.youtube.com/embed/videoseries?list=PLo-TAH2eiryEtgEQkLjHA5jBAT0-cNPJ8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	  </div>
 	  
 	  <div class="option">
